force-app/main/default/objects/Pal__c/Pal__c.object-meta.xml
<CustomObject>
    <label>Pal</label>
    <nameField>
        <label>Pal Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>