force-app/main/default/objects/Pal__c/fields/type__c.field-meta.xml
<CustomField>
    <fullName>type__c</fullName>
    <label>type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>staff</fullName>
            </value>
            <value>
                <fullName>friend</fullName>
            </value>
            <value>
                <fullName>family</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>