force-app/main/default/objects/Pal__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User__c</referenceTo>
    <relationshipLabel>Pals</relationshipLabel>
    <relationshipName>Pals</relationshipName>
    <type>Lookup</type>
</CustomField>